Update launch.sh with arm32 and --java Move daemon mode to launch.sh